Fix broken css

--- a/src/main/java/com/github/cypher/main.css
+++ b/src/main/java/com/github/cypher/main.css
@@ -37,7 +37,6 @@ root {
 	-fx-medium-base: #cecece;
 	-fx-dark-base: #404040;
 	-fx-color-base: #404040;
-	-fx-lighter: #808080;
 	-fx-very-light: #DBDBDB;
 	-fx-soft-popup: #008CBA;
 	-fx-popup: #09CDDA;
